Changes made to admin panel

--- a/_config.yml
+++ b/_config.yml
@@ -18,17 +18,17 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Admin Panel
+img_src: "/assets/img/kgloggamnamn.png"
+email: marcus@krögargruppen.se
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hej och välkommen till Admin Panelen för Krögargruppen. Här kan du hantera alla kort som är inlagda i systemet.
+  Det går ej att lägga till nya kort, inte heller att redigera befintliga kort.
+  Däremot kan man i Admin Panelen se alla kort som är inlagda i systemet, och även notera buggar som uppstår i systemet.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username: jekyll
-
+# (Inaktiv tillsvidare) twitter_username: jekyllrb
+# (Inaktiv tillsvidare) github_username: jekyll
 # Build settings
 theme: minima
 plugins:
