--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 include:
   - _headers
+  - test.txt
 title: Admin Panel
 img_src: "/assets/img/kgloggamnamn.png"
 email: marcus@krögargruppen.se
