changes made to different pages. Pages have been exclued

--- a/_config.yml
+++ b/_config.yml
@@ -43,8 +43,10 @@ plugins:
 #
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
-#
-# exclude:
+
+exclude:
+  - about.markdown
+  - index.markdown
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
