--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 include:
   - _headers
-  - test.txt
+  - netlify.toml
 img_src: "/assets/img/kgloggamnamn.png"
 title: Admin Panel
 email: marcus@krögargruppen.se
